# DataSphere

./: .dockerignore  .gitignore  README.md  dockerfile  entrypoint.sh  folder_structure.md  notes.txt  pyproject.toml  requirements.txt  varcel.json  vercel.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
apps/streamlit/: DataSphere.py  app.py
apps/streamlit/pages/: ask_questions.py  chat.py
core/: global_settings.py
core/cache/chromadb_cache/: chroma.sqlite3
core/llm/LLMConnector/: groq_connector.py
core/llm/Retrivals/: text_embedding_retrival.py
core/upload_processing/: upload_files.py
core/utils/: chromadb.py
