[project]
name = "DataSphere"
version = "0.1.0"
description = ""
authors = [
    {name = "VireshAmbardar",email = "ambardarviresh18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "llama-index (>=0.13.3,<0.14.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-docling (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "huggingface-hub[hf-xet] (>=0.34.4,<0.35.0)",
    "einops (>=0.8.1,<0.9.0)",
    "langchain-core (>=0.3.75,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false