[tool.poetry]
name = "DataSphere"
version = "0.1.0"
description = ""
authors = ["VireshAmbardar <ambardarviresh18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.10"

streamlit = ">=1.49.1,<2.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
plotly = ">=6.3.0,<7.0.0"
langchain = ">=0.3.27,<0.4.0"
streamlit-autorefresh = ">=1.0.1,<2.0.0"
chromadb = ">=1.0.20,<2.0.0"
llama-index = ">=0.13.3,<0.14.0"
python-docx = ">=1.2.0,<2.0.0"
langchain-community = ">=0.3.29,<0.4.0"
langchain-docling = ">=1.0.0,<2.0.0"
sentence-transformers = ">=5.1.0,<6.0.0"
huggingface-hub = {version = ">=0.34.4,<0.35.0", extras = ["hf-xet"]}
einops = ">=0.8.1,<0.9.0"
langchain-core = ">=0.3.75,<0.4.0"
loguru = ">=0.7.3,<0.8.0"

# --- PyTorch CUDA 12.1 wheels from the supplemental source below ---
# These versions are the ones you were using; keep them aligned.
torch = {version = "2.5.1", source = "pytorch-cu121"}
torchvision = {version = "0.20.1", source = "pytorch-cu121"}
torchaudio = {version = "2.5.1", source = "pytorch-cu121"}
flagembedding = "^1.3.5"
rank-bm25 = "^0.2.2"
langchain-chroma = "^0.2.5"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"