[project]
name = "datasphere"
version = "0.1.0"
description = ""
authors = [
    {name = "VireshAmbardar",email = "ambardarviresh18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-docling (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "flagembedding (>=1.3.5,<2.0.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "groq (>=0.31.0,<0.32.0)",
    "pysqlite3-binary (>= 3.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]

[tool.poetry.group.accel-dml.dependencies]
torch-directml = "0.2.5.dev240914"
torch = "2.4.1"


[tool.poetry]
package-mode = false